--- a/requirements.txt
+++ b/requirements.txt
@@ -5,48 +5,54 @@ arrow==1.2.3
 async-timeout==4.0.2
 attrs==22.1.0
 binaryornot==0.4.4
-certifi==2022.6.15
 chardet==5.0.0
 charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.5
 cookiecutter==1.7.3
 fastapi==0.79.1
+fonttools==4.25.0
 frozenlist==1.3.1
+greenlet==3.0.1
 h11==0.12.0
 httpcore==0.15.0
 httptools==0.4.0
 httpx==0.23.0
-idna==3.3
-Jinja2==3.1.2
 jinja2-time==0.2.0
+joblib==1.3.2
 loguru==0.6.0
-MarkupSafe==2.1.1
+mkl-fft==1.3.6
+mkl-service==2.4.0
 msgpack==1.0.4
 multidict==6.0.2
+munkres==1.1.4
 nb-cli==0.6.7
+nltk==3.8.1
 nonebot-adapter-onebot==2.1.3
 nonebot2==2.0.0b5
-Pillow==9.2.0
+Pillow==9.4.0
+playwright==1.40.0
+ply==3.11
 poyo==0.5.0
 prompt-toolkit==3.0.31
+pycryptodome==3.19.0
 pydantic==1.9.2
+pyee==11.0.1
 pyfiglet==0.8.post1
 pygtrie==2.5.0
 PyMySQL==1.0.2
-python-dateutil==2.8.2
+PyQt5==5.15.7
 python-dotenv==0.21.0
 python-slugify==6.1.2
-PyYAML==6.0
-requests==2.28.1
+pyzbar==0.1.9
+regex==2023.10.3
 rfc3986==1.5.0
-six==1.16.0
+scipy==1.11.4
 sniffio==1.3.0
 starlette==0.19.1
 text-unidecode==1.3
 tomlkit==0.10.2
-typing_extensions==4.3.0
-urllib3==1.26.12
+tqdm==4.66.1
 uvicorn==0.18.3
 watchfiles==0.16.1
 wcwidth==0.2.5
@@ -55,5 +61,4 @@ wget==3.2
 win32-setctime==1.1.0
 wincertstore==0.2
 yarl==1.8.1
-nltk==3.8.1
-matplotlib==3.7.1
+zhconv==1.4.3
